@@ -51,7 +51,7 @@ You can include custom headers and footers in the output of the CGIs by dropping
 </p>
 
 <p>
-Custom headers are included immediately after the <b>&lt;BODY&gt;</b> tag in the CGI output.  Similarly, customer headers are included immediately before the closing <b>&lt;/BODY&gt;</b> tag.
+Custom headers are included immediately after the <b>&lt;BODY&gt;</b> tag in the CGI output, while custom footers are included immediately before the closing <b>&lt;/BODY&gt;</b> tag.
 </p>
 
 <p>There are two types of customer headers and footers:
