@@ -152,7 +152,7 @@ Run the configure script to initialize variables and create a Makefile as follow
 <p>
 <strong>
 <font color="red">
-./configure --prefix=<i>prefix</i> --with-cgiurl=<i>cgiurl</i> --with-htmurl=<i>htmurl</i> --with-nagios-user=<i>someuser</i> --with-nagios-grp=<i>somegroup</i> --with-command-grp=<i>cmdgroup</i>
+./configure --prefix=<i>prefix</i> --with-cgiurl=<i>cgiurl</i> --with-htmurl=<i>htmurl</i> --with-nagios-user=<i>someuser</i> --with-nagios-group=<i>somegroup</i> --with-command-group=<i>cmdgroup</i>
 </font>
 </strong>
 </p>
