@@ -1456,7 +1456,7 @@ This directive is used to identify the <i>short name</i> of the <a href="#host">
 </td>
 </tr>
 <tr>
-<td valign="top"><strong>host_name</strong>:</td>
+<td valign="top"><strong>hostgroup_name</strong>:</td>
 <td>
 This directive is used to identify the <i>short name(s)</i> of the <a href="#hostgroup">hostgroup(s)</a> that the escalation should apply to.  Multiple hostgroups should are seperated by commas.  If this is used, the escalation will apply to all hosts that are members of the specified hostgroup(s).
 </td>
